language/move-lang/tests/move_check/expansion/pack_no_fields_single_block_other_expr.exp
error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_other_expr.move:6:19 ───
   │
 6 │         let s = S 0;
   │                   ^ Invalid fields for struct construction. Expected: named arguments
   │

error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_other_expr.move:7:19 ───
   │
 7 │         let s = S f;
   │                   ^ Invalid fields for struct construction. Expected: named arguments
   │

error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_other_expr.move:8:19 ───
   │
 8 │         let g = G ();
   │                   ^^ Invalid fields for struct construction. Expected: named arguments
   │

error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_other_expr.move:9:19 ───
   │
 9 │         let g = G { {} };
   │                   ^^^^^^ Invalid fields for struct construction. Expected: named arguments
   │

